bug 1204 1205 1218 1219 1196 Signed-off-by: pfeng <pfeng@lisystec.com>

--- a/app/styles/slide_components/ComponentView.css
+++ b/app/styles/slide_components/ComponentView.css
@@ -36,6 +36,9 @@
 	word-wrap:break-word;
 	/*white-space: pre-wrap;*/
 }
+.component .content div{
+	min-height:20px;
+}
 
 .component .content-scale:not(.svg) {
 	display: inline-block;
